# job-reranker

./: README.md  config.py  main.py  pyproject.toml  submission.csv
data/: candidate_texts.py  loader.py
embeddings/: faiss_index.py  gemma_encoder.py  minilm_encoder.py
models/: candidate.py  ideal_profile.py  scoring.py
output/: formatter.py  validator.py
pipeline/: stage1_prefilter.py  stage2_ideal_profile.py  stage3_reranker.py  stage4_signal_blender.py  stage5_llm_ranker.py
prompts/: final_ranking.txt  ideal_candidate.txt
scoring/: composite.py  redrob_signals.py
scripts/: precompute_embeddings.py  validate.py
tests/: test_config.py  test_data.py  test_embeddings.py  test_models.py  test_output.py  test_scoring.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py
